--- a/index.html
+++ b/index.html
@@ -129,53 +129,17 @@
               })
               .catch(error => console.error("Error loading blog:", error));
           </script>
-      
-        <div class="card">
-          <article>
-            <h3><a href="#">Designing for Accessibility</a></h3>
-            <div class="meta">Aug 10, 2025 · 4 min read</div>
-            <p>Five easy steps to make your site more accessible to everyone.</p>
-          </article>
-        </div>
-        <div class="card">
-          <article>
-            <h3><a href="#">Performance Tips</a></h3>
-            <div class="meta">Jul 30, 2025 · 5 min read</div>
-            <p>How to optimize your website so it loads quickly and smoothly.</p>
-          </article>
-        </div>
-      </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact">
-      <h2>Contact</h2>
+      <sectionHeader>Contact</sectionHeader>
       <div class="cards">
         <div class="card">
-          <p><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></p>
-          <p><strong>LinkedIn:</strong> <a href="#">linkedin.com/in/yourname</a></p>
-          <p><strong>GitHub:</strong> <a href="#">github.com/yourname</a></p>
+          <p><strong>Email:</strong> <a href="alexanderzyue@gmail.com">alexanderzyue@gmail.com</a></p>
+          <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/alexzyue">linkedin.com/in/alexzyue</a></p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/AlexanderYue">github.com/AlexanderYue</a></p>
         </div>
-        <div class="card">
-          <h3>Send a Message</h3>
-          <form>
-            <label for="name">Name</label><br>
-            <input type="text" id="name" name="name" required><br><br>
-            <label for="message">Message</label><br>
-            <textarea id="message" name="message" rows="4" required></textarea><br><br>
-            <button class="btn primary" type="submit">Send</button>
-          </form>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container">
-      <div style="display:flex; justify-content:space-between; flex-wrap:wrap">
-        <div>© <span id="year"></span> Alexander Yue.</div>
-      </div>
-    </div>
   </footer>
 </body>
 </html>
