Removed contact info

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
 
     <!-- CONTACT -->
-    <section id="contact">
+<!---    <section id="contact">
       <sectionHeader>Contact</sectionHeader>
       <div class="cards">
         <div class="card">
@@ -140,6 +140,6 @@
           <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/alexzyue">linkedin.com/in/alexzyue</a></p>
           <p><strong>GitHub:</strong> <a href="https://github.com/AlexanderYue">github.com/AlexanderYue</a></p>
         </div>
-  </footer>
+  </footer>!-->
 </body>
 </html>
