--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#aboutme">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#blog">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <!--<li><a href="#contact">Contact</a></li>-->
         </ul>
       </nav>
     </div>
