started adding work exp section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <nav aria-label="Primary">
         <ul>
           <li><a href="#aboutme">About</a></li>
+          <li><a href="#work">Work Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#blog">Blog</a></li>
           <!--<li><a href="#contact">Contact</a></li>-->
@@ -53,6 +54,14 @@
         <ul>
           <li>CompTIA Security+ (July 23rd, 2025)</li>
         </ul>
+      </div>
+    </section>
+
+    <!--Work Experience-->      
+    <section id ="work">
+      <sectionHeader>Work Experience</sectionHeader>
+      <div class = "cards">
+        <para>Under Construction</para>
       </div>
     </section>
 
@@ -107,6 +116,8 @@
             
             <p><strong>Tech Stack:</strong> C++, CUDA, NVIDIA GPU architecture, benchmarking tools.</p>
           </div>
+
+
 
     <!-- BLOG -->
     <section id="blog">
